// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingPaymentMethod Shopify should render a button 1`] = `
<BillingPaymentMethod
  creditCard={Immutable.Map {}}
  currentPlan={
    Immutable.Map {
      "amount": 12,
      "currencySign": "$",
    }
  }
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={false}
  paymentMethod="shopify"
  shopifyBillingStatus="inactive"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      <i
        className="material-icons"
      >
        credit_card
      </i>
       Payment method
    </h4>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <div
              id="activate-shopify-billing-button"
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <Button
                className=""
                color="success"
                disabled={false}
                href="/integrations/shopify/billing/activate/"
                onClick={[Function]}
                tag="a"
              >
                <a
                  className="btn btn-success"
                  disabled={false}
                  href="/integrations/shopify/billing/activate/"
                  onClick={[Function]}
                >
                  Activate billing with Shopify and pay $12
                </a>
              </Button>
            </div>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Shopify should render a button to reactivate billing 1`] = `
<div
  className="mb-5"
>
  <h4>
    <i
      className="material-icons"
    >
      credit_card
    </i>
     Payment method
  </h4>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div>
        <i
          className="material-icons text-warning md-2"
        >
          warning
        </i>
         
        Billing with Shopify is inactive. Please reactivate to avoid account cancellation.
         
        <Button
          className="float-right"
          color="success"
          href="/integrations/shopify/billing/activate/"
          onClick={[Function]}
          tag="a"
        >
          Reactivate billing with Shopify
        </Button>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`BillingPaymentMethod Shopify should render a disabled button 1`] = `
<div
  className="mb-5"
>
  <h4>
    <i
      className="material-icons"
    >
      credit_card
    </i>
     Payment method
  </h4>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <div
        id="activate-shopify-billing-button"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <Button
          className=""
          color="success"
          disabled={true}
          href="/integrations/shopify/billing/activate/"
          onClick={[Function]}
          tag="a"
        >
          Activate billing with Shopify
        </Button>
        <UncontrolledTooltip
          placement="top"
          target="activate-shopify-billing-button"
        >
          Select a plan before activating Shopify billing
        </UncontrolledTooltip>
      </div>
    </CardBody>
  </Card>
</div>
`;

exports[`BillingPaymentMethod Shopify should render an active status 1`] = `
<BillingPaymentMethod
  creditCard={Immutable.Map {}}
  currentPlan={Immutable.Map {}}
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="shopify"
  shopifyBillingStatus="active"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      <i
        className="material-icons"
      >
        credit_card
      </i>
       Payment method
    </h4>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <p
              className="mt-2 mb-2"
            >
              <i
                className="material-icons text-success md-2"
              >
                check_circle
              </i>
               
              Payment with Shopify is active. You're all set.
            </p>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Stripe should render a button 1`] = `
<BillingPaymentMethod
  creditCard={Immutable.Map {}}
  currentPlan={Immutable.Map {}}
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="stripe"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      <i
        className="material-icons"
      >
        credit_card
      </i>
       Payment method
    </h4>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <Row
              tag="div"
            >
              <div
                className="row"
              >
                <Col
                  sm={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="col-sm-4"
                  >
                    <div
                      style={
                        Object {
                          "paddingTop": 8,
                        }
                      }
                    >
                      No credit card registered
                    </div>
                  </div>
                </Col>
                <Col
                  className="text-right"
                  sm={
                    Object {
                      "offset": 4,
                      "size": 4,
                    }
                  }
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="text-right col-sm-4 offset-sm-4"
                  >
                    <div
                      id="add-credit-card-button"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <Button
                        color="success"
                        disabled={false}
                        tag={[Function]}
                        to="/app/settings/billing/add-credit-card"
                      >
                        <Link
                          className="btn btn-success"
                          disabled={false}
                          onClick={[Function]}
                          onlyActiveOnIndex={false}
                          style={Object {}}
                          to="/app/settings/billing/add-credit-card"
                        >
                          <a
                            className="btn btn-success"
                            disabled={false}
                            onClick={[Function]}
                            style={Object {}}
                          >
                            Add credit card
                          </a>
                        </Link>
                      </Button>
                    </div>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Stripe should render a button to update a credit card 1`] = `
<BillingPaymentMethod
  creditCard={
    Immutable.Map {
      "brand": "Visa",
      "last4": 4242,
      "exp_month": 9,
      "exp_year": 2017,
    }
  }
  currentPlan={Immutable.Map {}}
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="stripe"
  subscription={
    Immutable.Map {
      "plan": "basic-usd-1",
    }
  }
>
  <div
    className="mb-5"
  >
    <h4>
      <i
        className="material-icons"
      >
        credit_card
      </i>
       Payment method
    </h4>
    <Card
      tag="div"
    >
      <div
        className="card"
      >
        <CardBody
          tag="div"
        >
          <div
            className="card-body"
          >
            <Row
              tag="div"
            >
              <div
                className="row"
              >
                <Col
                  sm={4}
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="col-sm-4"
                  >
                    <div
                      style={
                        Object {
                          "paddingTop": 8,
                        }
                      }
                    >
                      <span>
                        Visa
                         ending in 
                        <strong>
                          4242
                           
                        </strong>
                      </span>
                      <span>
                        will expire on 
                        <em>
                          9
                          /
                          2017
                        </em>
                      </span>
                    </div>
                  </div>
                </Col>
                <Col
                  className="text-right"
                  sm={
                    Object {
                      "offset": 4,
                      "size": 4,
                    }
                  }
                  tag="div"
                  widths={
                    Array [
                      "xs",
                      "sm",
                      "md",
                      "lg",
                      "xl",
                    ]
                  }
                >
                  <div
                    className="text-right col-sm-4 offset-sm-4"
                  >
                    <Button
                      color="secondary"
                      tag={[Function]}
                      to="/app/settings/billing/update-credit-card"
                    >
                      <Link
                        className="btn btn-secondary"
                        onClick={[Function]}
                        onlyActiveOnIndex={false}
                        style={Object {}}
                        to="/app/settings/billing/update-credit-card"
                      >
                        <a
                          className="btn btn-secondary"
                          onClick={[Function]}
                          style={Object {}}
                        >
                          Update credit card
                        </a>
                      </Link>
                    </Button>
                  </div>
                </Col>
              </div>
            </Row>
          </div>
        </CardBody>
      </div>
    </Card>
  </div>
</BillingPaymentMethod>
`;

exports[`BillingPaymentMethod Stripe should render a disabled button 1`] = `
<div
  className="mb-5"
>
  <h4>
    <i
      className="material-icons"
    >
      credit_card
    </i>
     Payment method
  </h4>
  <Card
    tag="div"
  >
    <CardBody
      tag="div"
    >
      <Row
        tag="div"
      >
        <Col
          sm={4}
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            style={
              Object {
                "paddingTop": 8,
              }
            }
          >
            No credit card registered
          </div>
        </Col>
        <Col
          className="text-right"
          sm={
            Object {
              "offset": 4,
              "size": 4,
            }
          }
          tag="div"
          widths={
            Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ]
          }
        >
          <div
            id="add-credit-card-button"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <Button
              color="success"
              disabled={true}
              tag={[Function]}
              to="/app/settings/billing/add-credit-card"
            >
              Add credit card
            </Button>
            <UncontrolledTooltip
              placement="top"
              target="add-credit-card-button"
            >
              Select a plan before adding a credit card
            </UncontrolledTooltip>
          </div>
        </Col>
      </Row>
    </CardBody>
  </Card>
</div>
`;

exports[`BillingPaymentMethod Stripe should render a loader 1`] = `
<BillingPaymentMethod
  creditCard={Immutable.Map {}}
  currentPlan={Immutable.Map {}}
  fetchCreditCard={[Function]}
  fetchPaymentMethod={[Function]}
  paymentIsActive={true}
  paymentMethod="stripe"
>
  <Loader
    inline={false}
    minHeight="500px"
    size="40px"
  >
    <div
      className="container"
    >
      <div
        className="inner"
        style={
          Object {
            "fontSize": "40px",
            "minHeight": "500px",
          }
        }
      >
        <i
          className="icon-custom icon-circle-o-notch md-spin"
        />
      </div>
    </div>
  </Loader>
</BillingPaymentMethod>
`;
